// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable 1`] = `
Object {
  "images": Array [
    Object {
      "height": 100,
      "path": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
      "width": 100,
    },
  ],
  "src": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
  "srcSet": "foobar/c9fec88e524931764f00bab4a70790b2-100.jpg",
  "toString": [Function],
}
`;

exports[`multiple sizes 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
      "width": 500,
    },
    Object {
      "height": 900,
      "path": "foobar/6801db19d07d82551852bf6f258f62bf-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
  "srcSet": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg 500w,foobar/6801db19d07d82551852bf6f258f62bf-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
  "srcSet": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be in outputPath dir 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/img/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/img/63986dc24badace0c2676f9b60800d95-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/img/6801db19d07d82551852bf6f258f62bf-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/img/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
  "srcSet": "foobar/img/0429a2ab6f91e9c14d31fd68587f7460-500.jpg 500w,foobar/img/63986dc24badace0c2676f9b60800d95-750.jpg 750w,foobar/img/6801db19d07d82551852bf6f258f62bf-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/test/0429a2ab6f91e9c14d31fd68587f7460-500x450.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/test/63986dc24badace0c2676f9b60800d95-750x675.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/test/6801db19d07d82551852bf6f258f62bf-1000x900.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/test/0429a2ab6f91e9c14d31fd68587f7460-500x450.jpg",
  "srcSet": "foobar/test/0429a2ab6f91e9c14d31fd68587f7460-500x450.jpg 500w,foobar/test/63986dc24badace0c2676f9b60800d95-750x675.jpg 750w,foobar/test/6801db19d07d82551852bf6f258f62bf-1000x900.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`override min and max with size 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/1c8750011e160ec41d57e15e4bd904f3-100.jpg",
      "width": 100,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/1c8750011e160ec41d57e15e4bd904f3-100.jpg",
  "srcSet": "foobar/1c8750011e160ec41d57e15e4bd904f3-100.jpg 100w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/1c8750011e160ec41d57e15e4bd904f3-100.jpg",
      "width": 100,
    },
    Object {
      "height": 180,
      "path": "foobar/8009d43adef2cbd1af44e1959b1af387-200.jpg",
      "width": 200,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/1c8750011e160ec41d57e15e4bd904f3-100.jpg",
  "srcSet": "foobar/1c8750011e160ec41d57e15e4bd904f3-100.jpg 100w,foobar/8009d43adef2cbd1af44e1959b1af387-200.jpg 200w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`png 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/4481956c9e3a909fc355403f35f3e150-500.png",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/a9e996a9f55911b83718f26a19327b54-513.png",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/4481956c9e3a909fc355403f35f3e150-500.png",
  "srcSet": "foobar/4481956c9e3a909fc355403f35f3e150-500.png 500w,foobar/a9e996a9f55911b83718f26a19327b54-513.png 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/553f6bceed78e1c1b11be188b0ba271e-500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/130f1f85892eda69981a73cc638b55d7-513.jpg",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/553f6bceed78e1c1b11be188b0ba271e-500.jpg",
  "srcSet": "foobar/553f6bceed78e1c1b11be188b0ba271e-500.jpg 500w,foobar/130f1f85892eda69981a73cc638b55d7-513.jpg 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`png to jpeg with background color 2`] = `
Object {
  "height": 580,
  "images": Array [
    Object {
      "height": 580,
      "path": "foobar/553f6bceed78e1c1b11be188b0ba271e-500.jpg",
      "width": 500,
    },
    Object {
      "height": 595,
      "path": "foobar/130f1f85892eda69981a73cc638b55d7-513.jpg",
      "width": 513,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/553f6bceed78e1c1b11be188b0ba271e-500.jpg",
  "srcSet": "foobar/553f6bceed78e1c1b11be188b0ba271e-500.jpg 500w,foobar/130f1f85892eda69981a73cc638b55d7-513.jpg 513w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`public path should replace global publicPath 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "public/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "public/63986dc24badace0c2676f9b60800d95-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "public/6801db19d07d82551852bf6f258f62bf-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "public/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
  "srcSet": "public/0429a2ab6f91e9c14d31fd68587f7460-500.jpg 500w,public/63986dc24badace0c2676f9b60800d95-750.jpg 750w,public/6801db19d07d82551852bf6f258f62bf-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`single size 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
      "width": 500,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
  "srcSet": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg 500w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "height": 540,
  "images": Array [
    Object {
      "height": 540,
      "path": "foobar/c0e905fb89fdd0083a2c70080df10f0c-600.jpg",
      "width": 600,
    },
    Object {
      "height": 630,
      "path": "foobar/b702c730461974bc4f9a626580bf6f0a-700.jpg",
      "width": 700,
    },
    Object {
      "height": 720,
      "path": "foobar/be35f3271a55ffcc20768788809855c4-800.jpg",
      "width": 800,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/c0e905fb89fdd0083a2c70080df10f0c-600.jpg",
  "srcSet": "foobar/c0e905fb89fdd0083a2c70080df10f0c-600.jpg 600w,foobar/b702c730461974bc4f9a626580bf6f0a-700.jpg 700w,foobar/be35f3271a55ffcc20768788809855c4-800.jpg 800w",
  "toString": [Function],
  "width": 600,
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "height": 90,
  "images": Array [
    Object {
      "height": 90,
      "path": "foobar/1c8750011e160ec41d57e15e4bd904f3-100.jpg",
      "width": 100,
    },
    Object {
      "height": 150,
      "path": "foobar/41c3f613507c807be81bdb3a4be55237-167.jpg",
      "width": 167,
    },
    Object {
      "height": 211,
      "path": "foobar/547dcf9850202380d7c05248197ea410-234.jpg",
      "width": 234,
    },
    Object {
      "height": 270,
      "path": "foobar/4f87da871e132c05ef0f14353e777d99-300.jpg",
      "width": 300,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/1c8750011e160ec41d57e15e4bd904f3-100.jpg",
  "srcSet": "foobar/1c8750011e160ec41d57e15e4bd904f3-100.jpg 100w,foobar/41c3f613507c807be81bdb3a4be55237-167.jpg 167w,foobar/547dcf9850202380d7c05248197ea410-234.jpg 234w,foobar/4f87da871e132c05ef0f14353e777d99-300.jpg 300w",
  "toString": [Function],
  "width": 100,
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
      "width": 500,
    },
    Object {
      "height": 600,
      "path": "foobar/b72d937a7b455f797b29d64062f273ce-667.jpg",
      "width": 667,
    },
    Object {
      "height": 751,
      "path": "foobar/d0c44e8e628b7a3c2c79ab38c0f964b2-834.jpg",
      "width": 834,
    },
    Object {
      "height": 900,
      "path": "foobar/6801db19d07d82551852bf6f258f62bf-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
  "srcSet": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg 500w,foobar/b72d937a7b455f797b29d64062f273ce-667.jpg 667w,foobar/d0c44e8e628b7a3c2c79ab38c0f964b2-834.jpg 834w,foobar/6801db19d07d82551852bf6f258f62bf-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with placeholder image 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/63986dc24badace0c2676f9b60800d95-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/6801db19d07d82551852bf6f258f62bf-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": "data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx4BBQUFBwYHDggIDh4UERQeHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHv/AABEIACQAKAMBEQACEQEDEQH/xAGiAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgsQAAIBAwMCBAMFBQQEAAABfQECAwAEEQUSITFBBhNRYQcicRQygZGhCCNCscEVUtHwJDNicoIJChYXGBkaJSYnKCkqNDU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6g4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2drh4uPk5ebn6Onq8fLz9PX29/j5+gEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoLEQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGhscEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri4+Tl5ufo6ery8/T19vf4+fr/2gAMAwEAAhEDEQA/AMnW/wBnZLi/iGlaha2NmW/et5bmRF9FXOG+pIxW7pLoZ8ztZlJv2aJ11SGRPFMctmGzIslmQ+OwGGIPv0qfZDUi7rn7NGk3MRfTtduLS4Pcwhoz/wAByMfnVOmg5mcvc/s5+LNHubW+0jVLHUpIzmWJgYT/AMBySDx64rKpQcotG1Gt7Oal2O98GfB6drqK98VyQmNDuFlCchj/ALbensOvrXPRwVneZ34jM+ZctNfM9vnlgtbaW5uZI4YIlLvI/CqoGST6V6J5B5H4m/aC8HaZcvBpdtd6uyHBlT91ET7FuT/3zis3USGosk8CfHjw34i1iLS72wuNImuDtikeUSRFvQnAIz64xQqi6g4s9UhvLG4x5F3bShjtBSRWyfTjvWl0IkKA8H8jQB4p4t+HvjzU9DvD4r+ILTWFvA8jxxjyo22jPz4Cgjjqc1jKM31LTiuh81myLv8AuyJEAB+T5sjpz6VhujTZnffDX4aa1rjXtwrLYzafMsey5BVtxGfw4IpyjdEqVmetfCb4aXnhzxrBrUlxD5KRs10C+4yTEMPl4HA3A59QaqnB8ybCUlY9tBV+RkDuMV1GRnXen2l5Zy213As8U6lJIZPmRweCCDwancDz/WfhJaz+LrHxDpSWNgbcqJYBbDy3VfukKuMMOP09Kh09boaemps65pWslXSNI83PElxHHh9wHBJByOBjPapmmwRZ+F2m6/D4dMfiKV5rhLmQRzsAGkjzwSB05zVU07ajlbodd5JXJB4rToSSqvOcmmAx8qeCalgELFgxbmmgJW4UDPWmADkZ7nrQB//Z",
  "src": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
  "srcSet": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg 500w,foobar/63986dc24badace0c2676f9b60800d95-750.jpg 750w,foobar/6801db19d07d82551852bf6f258f62bf-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "height": 450,
  "images": Array [
    Object {
      "height": 450,
      "path": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
      "width": 500,
    },
    Object {
      "height": 675,
      "path": "foobar/63986dc24badace0c2676f9b60800d95-750.jpg",
      "width": 750,
    },
    Object {
      "height": 900,
      "path": "foobar/6801db19d07d82551852bf6f258f62bf-1000.jpg",
      "width": 1000,
    },
  ],
  "placeholder": undefined,
  "src": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg",
  "srcSet": "foobar/0429a2ab6f91e9c14d31fd68587f7460-500.jpg 500w,foobar/63986dc24badace0c2676f9b60800d95-750.jpg 750w,foobar/6801db19d07d82551852bf6f258f62bf-1000.jpg 1000w",
  "toString": [Function],
  "width": 500,
}
`;
